# FlarkViz

./: .gitignore  ARCHITECTURE.md  CMakeLists_Plugin.txt  FEATURES.md  FlarkViz.jucer  PHASE2_COMPLETE.md  README.md  START_BUILDING.md  create_stubs.sh  push_to_github.sh
AppDir/usr/share/applications/: flarkviz.desktop
Option2_JUCE_FlarkViz/: BUILD.md  CMakeLists.txt  CONTRIBUTING.md  GITHUB_PUSH.md  QUICKSTART.md  example_preset.milk  test_expressions.cpp  test_integration.cpp  test_shaders.cpp
Option2_JUCE_FlarkViz/Source/: JuceHeader.h  Main.cpp  MainComponent.cpp
Option2_JUCE_FlarkViz/Source/Audio/: AudioAnalyzer.h  AudioCapture.h
Option2_JUCE_FlarkViz/Source/Expression/: ExpressionTypes.h  MilkdropEval.cpp  MilkdropEval.h
Option2_JUCE_FlarkViz/Source/Presets/: Milk2Loader.h  PresetLoader.cpp  PresetLoader.h  PresetManager.cpp  PresetManager.h
Option2_JUCE_FlarkViz/Source/Rendering/: FramebufferManager.h  PresetRenderer.cpp  PresetRenderer.h  RenderState.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderTypes.h  TransitionEngine.cpp  TransitionEngine.h
Option2_JUCE_FlarkViz/demo/: FlarkVizASCII.cpp  FlarkVizDemo.cpp  Makefile  verify_build.cpp
Option2_JUCE_FlarkViz/examples/: EXAMPLES_SUMMARY.md  demo1.cast  demo3.cast  simple_expression_demo.cpp
Option2_JUCE_FlarkViz/release/: RELEASE_NOTES.md
Option2_JUCE_FlarkViz/release/FlarkViz-v1.0.0-linux-x64/: README.md
Option2_JUCE_FlarkViz/release/FlarkViz-v1.0.0-linux-x64/examples/: animated_demo  animated_demo.cpp  example_usage.cpp
Source/: JuceHeader.h  Main.cpp  MainComponent.h  ProjectInfo.h
Source/Audio/: AudioAnalyzer.cpp  AudioCapture.cpp
Source/Plugin/: FlarkVizPlugin.cpp  FlarkVizPlugin.h  FlarkVizPluginEditor.cpp  FlarkVizPluginEditor.h
Source/Presets/: Milk2Loader.cpp  Milk2Loader.h  Preset.cpp  Preset.h  PresetLoader.cpp  PresetLoader.h
Source/Rendering/: FramebufferManager.cpp  PresetRenderer.cpp  PresetRenderer.h  RenderState.cpp  ShaderTemplates.h  TransitionEngine.cpp  TransitionEngine.h
examples/: README.md  demo2.cast  example_bass_pulse.milk  visual_demo.cpp
release/: SHA256SUMS
release/FlarkViz-Plugins-v1.0.0-linux-x64/: README.md
release/FlarkViz-Plugins-v1.0.0-linux-x64/FlarkViz.lv2/: dsp.ttl  manifest.ttl  ui.ttl
release/FlarkViz-Plugins-v1.0.0-linux-x64/FlarkViz.vst3/Contents/Resources/: moduleinfo.json
release/FlarkViz-v1.0.0-linux-x64/examples/: example_kaleidoscope.milk  example_spiral_tunnel.milk  expr_demo
